--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 :root {
   --font-ysabeau-sc: "Ysabeau SC", sans-serif;
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #ffffff;
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.141 0.005 285.823);
   --popover: oklch(1 0 0);
